--- a/front-end/mainpages/css/style.css
+++ b/front-end/mainpages/css/style.css
@@ -9,7 +9,19 @@
 
 body {
   margin: 0;
+  width: 100%;
+  height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
+}
+.container-title,
+h1 {
+  color: var(red);
+  background-color: var(--main-bg-color);
+  text-align: center;
+  margin: 0%;
+  width: 100%;
+  height: 100%;
+  padding: auto;
 }
 
 .topnav {
@@ -62,7 +74,7 @@ body {
   .topnav .search-container {
     float: none;
   }
-  h1,
+
   .topnav a,
   .topnav input[type="text"],
   .topnav .search-container button {
