--- a/front-end/mainpages/css/style.css
+++ b/front-end/mainpages/css/style.css
@@ -13,17 +13,22 @@ body {
   height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
 }
-.container-title,
+
 h1 {
-  color: var(red);
-  background-color: var(--main-bg-color);
+  color: red;
+  background-color: var(yellow);
   text-align: center;
   margin: 0%;
   width: 100%;
   height: 100%;
   padding: auto;
 }
-
+p {
+  color: #438eb9;
+}
+#test {
+  color: aqua;
+}
 .topnav {
   overflow: hidden;
   background-color: var(--main-bg-color);
