--- a/front-end/mainpages/css/style.css
+++ b/front-end/mainpages/css/style.css
@@ -1,11 +1,10 @@
-:root {
+/* :root {
   --main-bg-color: #438eb9;
   --header-text-color: #fff;
-}
+} */
 
 * {
   box-sizing: border-box;
-  background-color: #438eb9;
 }
 
 body {
@@ -14,13 +13,13 @@ body {
   height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
 }
-.red {
+/* .red {
   background-color: aqua;
   color: aquamarine;
-}
+} */
 h1 {
-  color: red;
-  background-color: var(yellow);
+  color: rgb(248, 248, 248);
+
   text-align: center;
   margin: 0%;
   width: 100%;
@@ -28,11 +27,11 @@ h1 {
   padding: auto;
 }
 p {
-  color: #438eb9;
+  color: #f2f2f2;
 }
-#test {
+/* #test {
   color: aqua;
-}
+} */
 .topnav {
   overflow: hidden;
   background-color: var(--main-bg-color);
@@ -97,4 +96,7 @@ p {
   .topnav input[type="text"] {
     border: 1px solid #ccc;
   }
+}
+p {
+  color: #ccc;
 }
