--- a/front-end/mainpages/css/stylee.css
+++ b/front-end/mainpages/css/stylee.css
@@ -1,5 +1,5 @@
 :root {
-  --main-bg-color: #438eb9;
+  --main-bg-color: #1e272c;
   --header-text-color: #fff;
 }
 
@@ -15,8 +15,7 @@ body {
 }
 .container-title,
 h1 {
-  color: var(red);
-  background-color: var(--main-bg-color);
+  /* background-color: var(--main-bg-color); */
   text-align: center;
   margin: 0%;
   width: 100%;
@@ -38,11 +37,11 @@ h1 {
   text-decoration: none;
   font-size: 17px;
 }
-
+/* 
 .topnav a:hover {
   background-color: var(--header-text-color);
   color: var(--main-bg-color);
-}
+} */
 
 .topnav .search-container {
   float: right;
@@ -88,4 +87,23 @@ h1 {
   .topnav input[type="text"] {
     border: 1px solid #ccc;
   }
+}
+.form-inter {
+  padding: 20px;
+}
+form > p {
+  display: inline;
+  background-color: lightgrey;
+  margin: 10px;
+}
+
+table {
+  border: 2px solid rgb(8, 8, 9);
+  text-align: center;
+  margin-left: 20px;
+  width: auto;
+}
+thead,
+th {
+  border: 2px solid rgb(8, 8, 9);
 }
