--- a/front-end/mainpages/css/stylee.css
+++ b/front-end/mainpages/css/stylee.css
@@ -1,12 +1,7 @@
-<<<<<<< HEAD:front-end/mainpages/css/style.css
-/* :root {
-  --main-bg-color: #438eb9;
-=======
 :root {
-  --main-bg-color: #1e272c;
->>>>>>> workBranch:front-end/mainpages/css/stylee.css
+  --main-bg-color: #438eb9;
   --header-text-color: #fff;
-} */
+}
 
 * {
   box-sizing: border-box;
@@ -22,13 +17,12 @@ body {
   background-color: aqua;
   color: aquamarine;
 } */
+.container-title {
+  background-color: var(--main-bg-color);
+}
 h1 {
-<<<<<<< HEAD:front-end/mainpages/css/style.css
-  color: rgb(248, 248, 248);
+  color: var(--header-text-color);
 
-=======
-  /* background-color: var(--main-bg-color); */
->>>>>>> workBranch:front-end/mainpages/css/stylee.css
   text-align: center;
   margin: 0%;
   width: 100%;
@@ -55,11 +49,11 @@ p {
   text-decoration: none;
   font-size: 17px;
 }
-/* 
+
 .topnav a:hover {
   background-color: var(--header-text-color);
   color: var(--main-bg-color);
-} */
+}
 
 .topnav .search-container {
   float: right;
@@ -106,27 +100,15 @@ p {
     border: 1px solid #ccc;
   }
 }
-<<<<<<< HEAD:front-end/mainpages/css/style.css
-p {
-  color: #ccc;
-=======
-.form-inter {
-  padding: 20px;
-}
-form > p {
+.form-inter > p {
+  color: black;
   display: inline;
-  background-color: lightgrey;
   margin: 10px;
 }
-
-table {
-  border: 2px solid rgb(8, 8, 9);
-  text-align: center;
-  margin-left: 20px;
-  width: auto;
+.form-inter {
+  margin-top: 5px;
 }
-thead,
-th {
-  border: 2px solid rgb(8, 8, 9);
->>>>>>> workBranch:front-end/mainpages/css/stylee.css
+table {
+  border: 5px solid black;
+  padding: 5px;
 }
